# go-game

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  start.sh
server/: katagoBridge.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: katago_bridge.rs  lib.rs  main.rs
src/components/: Board.tsx  GameInfo.tsx
src/game/: ai.ts  aiWorker.ts  audio.ts  engine.ts  katagoClient.ts  types.ts
