[package]
name = "go-game"
version = "0.0.0"
description = "Go game desktop application"
authors = ["Go Game Contributors"]
edition = "2021"

[lib]
name = "go_game_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
